--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
-.App {
-  display:flex ;
-  justify-items: center;
-  align-items : center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-link {
-  color: #61dafb;
+body {
+  background-color: rgba(236,236,236, 0.9);
 }
-
